--- a/src/css/componentsCss/contact.css
+++ b/src/css/componentsCss/contact.css
@@ -18,15 +18,28 @@
   display: grid;
   width: 700px;
   grid-template-columns: repeat(2, 350px);
-  padding: 15px
+  padding: 15px;
 }
 
 .Contact__Container__Element {
   display: flex;
   align-items: center;
-  padding: 15px
+  padding: 15px;
 }
 
 .Container__Element_Description {
   margin: 25px;
+}
+@media (max-width: 600px) {
+  .Contact__Container {
+    margin-left: 10px;
+    padding-bottom: 20px;
+  }
+  .Contact__Container__Main {
+    border: 3px dashed #62f8d4;
+    display: block;
+    width: 325px;
+    padding: 0px;
+    margin-left: 0px;
+  }
 }
